chore: minor corrections (variable names, sonar, ..)